--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "packages/osmosis-test-tube/osmosis"]
 	path = packages/osmosis-test-tube/osmosis
-	url = https://github.com/osmosis-labs/osmosis.git
-	branch = main
+	url = https://github.com/oraichain/orai.git
+	branch = test-tube
 
