--- a/packages/osmosis-test-tube/Cargo.toml
+++ b/packages/osmosis-test-tube/Cargo.toml
@@ -11,13 +11,13 @@ exclude = ["osmosis", "test_artifacts"]
 
 [dependencies]
 base64 = "0.13.0"
-cosmrs = {version = "0.9.0", features = ["cosmwasm"]}
-cosmwasm-std = "1.4.0"
-osmosis-std = "0.19.1"
-prost = "0.11.0"
+cosmwasm-std = { git = "https://github.com/oraichain/cosmwasm.git" }
+prost = "0.12.0"
 serde = "1.0.144"
 serde_json = "1.0.85"
-test-tube = {version = "0.1.7", path = "../test-tube", features = ["module-wrappers"]}
+test-tube = { version = "0.1.7", path = "../test-tube", features = [
+    "module-wrappers",
+] }
 thiserror = "1.0.34"
 
 [build-dependencies]
