--- a/packages/osmosis-test-tube/Cargo.toml
+++ b/packages/osmosis-test-tube/Cargo.toml
@@ -15,9 +15,7 @@ cosmwasm-std = { git = "https://github.com/oraichain/cosmwasm.git" }
 prost = "0.12.0"
 serde = "1.0.144"
 serde_json = "1.0.85"
-test-tube = { version = "0.1.7", path = "../test-tube", features = [
-    "module-wrappers",
-] }
+test-tube = { path = "../test-tube", features = ["module-wrappers"] }
 thiserror = "1.0.34"
 
 [build-dependencies]
