--- a/packages/osmosis-test-tube/Cargo.toml
+++ b/packages/osmosis-test-tube/Cargo.toml
@@ -11,7 +11,7 @@ exclude = ["osmosis", "test_artifacts"]
 
 [dependencies]
 base64 = "0.13.0"
-cosmwasm-std = "1.4.0"
+cosmwasm-std = "=1.2"
 prost = "0.12.0"
 serde = "1.0.144"
 serde_json = "1.0.85"
