--- a/packages/test-tube/Cargo.toml
+++ b/packages/test-tube/Cargo.toml
@@ -11,7 +11,9 @@ version = "0.1.7"
 [dependencies]
 base64 = "0.13.0"
 cosmrs = { version = "0.15.0", features = ["cosmwasm", "rpc"] }
-cosmwasm-std = { version = "=1.2", features = ["stargate"] }
+cosmwasm-std = { git = "https://github.com/oraichain/cosmwasm.git", rev = "c00899504d18cb598206d8ebf8287326725db803", features = [
+    "stargate",
+] }
 prost = "0.12.0"
 serde = "1.0.144"
 serde_json = "1.0.85"
