--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,13 @@
 resolver = "2"
 
 members = ["packages/*"]
+
+
+[workspace.dependencies]
+cosmwasm-std = "1.5"
+prost = "0.11.0"
+serde = "1.0.144"
+serde_json = "1.0.85"
+thiserror = "1.0.34"
+cw1-whitelist = "1.0"
+rayon = "1.5.3"
