--- a/packages/osmosis-test-tube/Cargo.toml
+++ b/packages/osmosis-test-tube/Cargo.toml
@@ -11,10 +11,10 @@ exclude = ["osmosis", "test_artifacts"]
 
 [dependencies]
 base64 = "0.13.0"
-cosmwasm-std = { git = "https://github.com/oraichain/cosmwasm.git", rev = "c00899504d18cb598206d8ebf8287326725db803" }
-prost = "0.11.0"
-serde = "1.0.144"
-serde_json = "1.0.85"
+cosmwasm-std = { workspace = true }
+prost = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 test-tube = { path = "../test-tube", features = ["module-wrappers"] }
 thiserror = "1.0.34"
 
@@ -22,5 +22,5 @@ thiserror = "1.0.34"
 bindgen = "0.60.1"
 
 [dev-dependencies]
-cw1-whitelist = "0.15.0"
-rayon = "1.5.3"
+cw1-whitelist = { workspace = true }
+rayon = { workspace = true }
