--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = ["packages/*"]
 
 [workspace.dependencies]
 cosmwasm-std = "1.5"
+cosmwasm-schema = "1.5"
 prost = "0.11.0"
 serde = "1.0.144"
 serde_json = "1.0.85"
