seperate serde-json-wasm with serde-json for cosmwasm

--- a/packages/test-tube/Cargo.toml
+++ b/packages/test-tube/Cargo.toml
@@ -18,6 +18,7 @@ cosmwasm-std = { workspace = true, features = ["stargate"] }
 prost = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde-json-wasm = { workspace = true }
 thiserror = { workspace = true }
 
 [dev-dependencies]
