--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ cosmwasm-schema = "1.5"
 prost = "0.11.0"
 serde = "1.0.144"
 serde_json = "1.0.85"
+serde-json-wasm = "0.5.0"
 thiserror = "1.0.34"
 cw1-whitelist = "1.0"
 rayon = "1.5.3"
